import selected packages instead of the whole tidyverse

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,9 @@
 exportPattern("^[[:alpha:]]+")
-import(tidyverse)
+import(dplyr)
+import(tidyr)
+import(readr)
+import(ggplot2)
+import(purrr)
+import(rlang)
+import(stringr)
+import(forcats)
